[package]
name = "mk_org"
version = "0.1.0"
authors = ["Steve Canham <stevecanham@outlook.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mk_org"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "chrono" ] }
tokio = { version = "1.47.1", features = ["macros", "rt"]}
clap = { version = "4.5.48", features = ["cargo"] }
regex = "1.11.3"
chrono = { version = "0.4.42", features = ["clock"] }
log = "0.4.28"
log4rs = "1.4.0"
toml = "0.9.7"